Added passwordConfirmation in request for POST /api/v1/auth/register. Added POST /api/v1/auth/logout endpoint
